<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="800dp"
    android:layout_height="300dp"
    android:background="@drawable/popup_dialog"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/dialog_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/white"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/dialog_content_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="left|center_vertical"
        android:layout_marginLeft="30dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/dialog_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cancel_button_normal"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/dialog_sure_btn"
        android:layout_marginBottom="40dp"
        android:text="@string/dialog_cancel"
        android:textColor="@color/white"
        android:textSize="24sp"
        />
    <Button
        android:id="@+id/dialog_sure_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cancel_button_normal"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/dialog_sure"
        android:textColor="@color/white"
        android:textSize="24sp"/>

</RelativeLayout>