<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="800dp"
                android:layout_height="600dp"
                android:background="@drawable/npanel_bg"
    >
    <TextView
        android:id="@+id/info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/status_info_title"
        android:textSize="28sp"
        android:textColor="@color/white"
        />
    <View
        android:id="@+id/info_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/info_title"
        android:layout_marginTop="30dp"
        android:background="@drawable/npanel_divider"
        />
    <ScrollView
        android:id="@+id/info_sv"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/info_line"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:focusable="true"
        android:clickable="true"
        android:focusableInTouchMode="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <!-- 网络类型 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_type_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textSize="20sp"
                    android:text="@string/status_info_type"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/info_type"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_type_title"
                    android:layout_marginLeft="150dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            <!-- IP地址 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_ip_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/status_info_ip"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/info_ip"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_ip_title"
                    android:layout_marginLeft="150dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            <!-- 设备名称 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_device_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/status_info_devicename"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/info_devicename"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_device_title"
                    android:layout_marginLeft="150dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            <!-- 网络模式-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_modle_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/status_info_modle"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/info_modle"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_modle_title"
                    android:layout_marginLeft="150dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            <!-- 网络名称-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_ssid_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/status_info_name"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/info_ssid"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_ssid_title"
                    android:layout_marginLeft="150dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            <!-- 子网掩码 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_subnet_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/status_info_subnet"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/info_subnet"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_subnet_title"
                    android:layout_marginLeft="150dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            <!-- 网络状态 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_state_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/status_info_state"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/info_state"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_state_title"
                    android:layout_marginLeft="150dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            <!-- 网关-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_gateway_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/status_info_gateway"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/info_gateway"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_gateway_title"
                    android:layout_marginLeft="150dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            <!-- 速度-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_speed_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/status_info_speed"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/info_speed"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_speed_title"
                    android:layout_marginLeft="150dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            <!-- DNS1 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_dns1_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/status_info_dns1"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/info_dns1"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_dns1_title"
                    android:layout_marginLeft="150dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            <!-- 信号质量-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_quality_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/status_info_quality"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <ImageView
                    android:id="@+id/info_quality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_quality_title"
                    android:layout_marginLeft="150dp"
                    />
            </RelativeLayout>
            <!-- DNS2-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_dns2_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/status_info_dns2"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/info_dns2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_dns2_title"
                    android:layout_marginLeft="150dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            <!-- 加密类型-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_security_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/status_info_security"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/info_security"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_security_title"
                    android:layout_marginLeft="150dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            <!-- 以太网MAC地址 -->
            <RelativeLayout
                android:id="@+id/rl_ether_mac"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_ethMac_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/status_info_ethmac"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/info_ethMac"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_ethMac_title"
                    android:layout_marginLeft="150dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            <!-- 无线MAC地址 -->
            <RelativeLayout
                android:id="@+id/rl_wifi_mac"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                >
                <TextView
                    android:id="@+id/info_wifiMac_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/status_info_wifimac"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/info_wifiMac"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/info_wifiMac_title"
                    android:layout_marginLeft="150dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/info_close"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/net_close"
        android:textSize="25sp"
        android:background="@drawable/dialog_button_selector"
        android:textColor="@drawable/button_text_color_selector"
        />
</RelativeLayout>
